--- a/credit/index.html
+++ b/credit/index.html
@@ -244,10 +244,12 @@
 </ul>
 </li>
 <li><strong>アレッサンドロ#2206</strong> - Switch Files  </li>
-<li><strong>753#0753</strong> - Commands  </li>
-<li><strong>RyFol#0001</strong> - Commands </li>
+<li><strong>753#0753</strong> - Commands Contribution</li>
+<li><strong>RyFol#0001</strong> - Commands Contribution </li>
+<li><strong>Franjo#6993</strong> - Commands Contribution</li>
 <li><strong>BiC2#3876</strong> - Blender pack of All Dungeons Mobs</li>
-<li><strong>Chill#2133</strong> - Stats Sheet</li>
+<li><strong>Chill#2133</strong> - General Stats Sheet</li>
+<li><strong>ᏦᎩᏝᏋ#9242</strong> - Enchant Calc Sheet</li>
 <li><strong>Krormar#7634</strong> - Actor Blueprint List</li>
 <li><strong>Nanikos#5668</strong> - Item ID List</li>
 </ul>
