--- a/resources/index.html
+++ b/resources/index.html
@@ -366,7 +366,12 @@
 <li><strong>toggledebugcamera</strong> - Toggles much better free cam  </li>
 <li><strong>Teleport</strong> - Use in combination with free cam to teleport to "crosshair" location  </li>
 <li><strong>FOV [newFov]</strong> - changes FOV  </li>
-<li><strong>summon [blueprintname]_c</strong> - summons item or mob but they are very broken  </li>
+<li><strong>summon [blueprintname]_c</strong> - summons item or mob but they are very broken<ul>
+<li><strong>summon [blueprintname]Actor_c</strong> - will summon a player model with the item what you want to spawn  </li>
+<li><strong>summon [blueprintname]Instance_c</strong> - will crash the game for some reason  </li>
+<li><strong>summon [blueprintname]Storable_c</strong> - will summon the item on the ground, upon pickup the item is broken</li>
+</ul>
+</li>
 <li><strong>showdebuginfo</strong> - I think this is one but it shows UE4 cords and other stuff  </li>
 <li><strong>open [levelname]</strong> - opens specific level  </li>
 <li><strong>slomo [0.0-1.0]</strong> - slows down game if you start going below 1.0  </li>
@@ -385,8 +390,9 @@
 <ul>
 <li><strong><a href="http://www.mediafire.com/file/fbqv0i2gof4le1j/All_Mobs_LibraryV2.blend/file">Blender pack of Dungeon Mobs</a></strong> By BiC</li>
 <li><strong><a href="https://pastebin.com/Q4tCihg9">Character Blueprint List</a></strong> By Krormar</li>
-<li><strong><a href="https://docs.google.com/spreadsheets/d/1vKtfgoEqV7AoOmhNYFoARhAMazTjxQTv4vt2DSUYWmk/edit#gid=751105029">Stats Table</a></strong> By Chill &amp; Contributors</li>
 <li><strong><a href="https://pastebin.com/TAnQ8t4K">Item ID List</a></strong> By Nanikos</li>
+<li><strong><a href="https://docs.google.com/spreadsheets/d/1vKtfgoEqV7AoOmhNYFoARhAMazTjxQTv4vt2DSUYWmk/edit#gid=751105029">General Stats Table</a></strong> By Chill &amp; Contributors</li>
+<li><strong><a href="https://docs.google.com/spreadsheets/d/1porrjuY86bptjHV1fUZe7B9Bxf_4JAaVFLHQHUDXv2w/edit#gid=676401907">Enchant Calculator Table</a></strong> By ᏦᎩᏝᏋ &amp; Contributors</li>
 </ul>
                 
               
