--- a/credit/index.html
+++ b/credit/index.html
@@ -236,8 +236,14 @@
                   <h1>Credit</h1>
                 
                 <ul>
+<li><strong>Tastac#0666</strong><ul>
+<li>Site Contribution</li>
+<li>Game Files</li>
+<li>Command Contribution</li>
+</ul>
+</li>
 <li><strong>IP#0001</strong> - Original Discord Guides </li>
-<li><strong><a href="https://discord.gg/2MB8bRQ">Dokucraft</a></strong> - Launcher Installation Guide </li>
+<li><strong>Dokucraft</strong> - Launcher Installation Guide </li>
 <li><strong>LukeFZ#4035</strong> <ul>
 <li>Windows Installation Guide and Script</li>
 <li>Switch Files</li>
