Formatting part 2: Electric Boogaloo Now actually readable

--- a/.SOURCE/site/credit/index.html
+++ b/.SOURCE/site/credit/index.html
@@ -244,7 +244,8 @@
 </li>
 <li><strong>IP#0001</strong> - Original Discord Guides </li>
 <li><strong>Dokucraft</strong> - Launcher Installation Guide </li>
-<li><strong>LukeFZ#4035</strong> <ul>
+<li><strong>LukeFZ#4035</strong><ul>
+<li>Site Contribution </li>
 <li>Windows Installation Guide and Script</li>
 <li>Switch Files</li>
 </ul>
