--- a/creatingmods/index.html
+++ b/creatingmods/index.html
@@ -433,7 +433,7 @@
 </div>
 <h3 id="using-quickbms">Using QuickBMS</h3>
 <ol>
-<li>Download <a href="https://aluigi.altervista.org/papers/quickbms.zip">QuickBMS</a> and the <a href="https://drive.google.com/file/d/1iRnav4y9PyvTvGWmUqHZcaRGrGSAVDh5/view?usp=sharing">Dungeons Script</a>.  </li>
+<li>Download <a href="https://aluigi.altervista.org/papers/quickbms.zip">QuickBMS</a> and the <a href="https://cdn.discordapp.com/attachments/715508829458006077/724750310496796733/dungeons.bms">Dungeons Script</a>.  </li>
 <li>Extract the <strong>QuickBMS zip</strong> and launch <strong>QuickBMS.exe</strong>.  </li>
 <li>Find and select the <strong>Dungeons script</strong> you downloaded and <strong>press open</strong>.  </li>
 <li>Go to <code>%localappdata%\Mojang\products\dungeons\dungeons\Dungeons\Content\Paks</code> and select all of the files, then <strong>press open</strong>.<br />
