Update gettingstarted to use github releases

--- a/.SOURCE/site/gettingstarted/index.html
+++ b/.SOURCE/site/gettingstarted/index.html
@@ -245,7 +245,7 @@
 <div class="admonition note">
 <p class="admonition-title">Prerequisites</p>
 <p><strong>Install <a href="https://aka.ms/vs/16/release/vc_redist.x64.exe">Visual C++ Redist</a></strong><br />
-<strong>Download <a href="https://docs.dungeonsworkshop.net/installscript/storepatcher.exe">storepatcher.exe</a></strong></p>
+<strong>Download <a href="https://github.com/dungeonsworkshop/dungeonsworkshop.github.io/releases">storepatcher.exe</a></strong></p>
 </div>
 <p><h3><strong>Windows Store Installation</strong></h3></p>
 <ol>
